대규모 구조 개선 및 HTML 페이지 렌더링 수정
HTML 페이지 랜더링 수정 / 페이지 정상 작동 확인
기존의 html 파일들은 전부 templates 폴더로 이동 ==> 파일 분리
기존의 css,js 파일들은 static 폴더로 이동 ==> 파일 분리

seoroApi.py는 사용하지 않는것을 추천합니다.

--- a/templates/result.html
+++ b/templates/result.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>분석 결과</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
     <div class="container">
@@ -23,6 +23,6 @@
             <p>업로드한 로그 데이터에 대해 각 셀 위치, 파일 정상 여부 등 확인 바랍니다.</p>
         </div>
     </div>
-    <script src="result.js"></script>
+    <script src="../static/result.js"></script>
 </body>
 </html>
