--- a/templates/result.html
+++ b/templates/result.html
@@ -16,6 +16,8 @@
             <div id="plot">
                 <h2>분석 그래프</h2>
                 <img id="plot-image" src="" alt="Plot Image">
+                <h2>원 그래프</h2>
+                <img id="pie-plot-image" src="" alt="Pie Plot Image">
             </div>
         </div>
         <div id="error-message" class="hidden">
