--- a/templates/log_type_selection.html
+++ b/templates/log_type_selection.html
@@ -26,7 +26,7 @@
         const logType = document.getElementById('log-type').value;
         
         if (logType !== 'apache') {
-            alert('분석 불가: Apache 로그 파일 유형만 지원됩니다.');
+            alert('분석 불가: 잘못된 로그 파일 형식입니다.');
             return;
         }
         
