--- a/templates/result.html
+++ b/templates/result.html
@@ -15,7 +15,7 @@
             <div id="recommendations"></div>
             <div id="plot">
                 <h2>분석 그래프</h2>
-                <div id="graph-container">
+                <div id="graph-container" class="centered">
                     <img id="plot-image" src="" alt="Plot Image" class="graph">
                     <img id="pie-plot-image" src="" alt="Pie Plot Image" class="graph">
                 </div>
