--- a/templates/result.html
+++ b/templates/result.html
@@ -20,8 +20,8 @@
                     <img id="pie-plot-image" src="" alt="Pie Plot Image" class="graph">
                 </div>
                 <div id="graph-navigation">
-                    <button id="prev-graph">이전 그래프</button>
-                    <button id="next-graph">다음 그래프</button>
+                    <button id="prev-graph" class="styled-button">이전 그래프</button>
+                    <button id="next-graph" class="styled-button">다음 그래프</button>
                 </div>
             </div>
         </div>
