--- a/templates/result.html
+++ b/templates/result.html
@@ -18,6 +18,7 @@
                 <div id="graph-container" class="centered">
                     <img id="plot-image" src="" alt="Plot Image" class="graph">
                     <img id="pie-plot-image" src="" alt="Pie Plot Image" class="graph">
+                    <img id="hist-plot-image" src="" alt="Histogram Image" class="graph"> <!-- 히스토그램 이미지 -->
                 </div>
                 <div id="graph-navigation">
                     <button id="prev-graph" class="styled-button">이전 그래프</button>
