--- a/templates/result.html
+++ b/templates/result.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>분석 결과</h1>
-        <div id="result">
+        <div id="result" class="hidden">
             <h2>분석 결과</h2>
             <div id="analysis-result"></div>
             <div id="recommendations"></div>
@@ -18,7 +18,7 @@
                 <div id="graph-container" class="centered">
                     <img id="plot-image" src="" alt="Plot Image" class="graph">
                     <img id="pie-plot-image" src="" alt="Pie Plot Image" class="graph">
-                    <img id="hist-plot-image" src="" alt="Histogram Image" class="graph"> <!-- 히스토그램 이미지 -->
+                    <img id="hist-plot-image" src="" alt="Histogram Image" class="graph">
                 </div>
                 <div id="graph-navigation">
                     <button id="prev-graph" class="styled-button">이전 그래프</button>
