--- a/templates/result.html
+++ b/templates/result.html
@@ -11,8 +11,7 @@
         <h1>분석 결과</h1>
         <div id="result" class="hidden">
             <h2>분석 결과</h2>
-            <div id="analysis-result"></div>
-            <div id="recommendations"></div>
+            <div id="error_code_descriptions"></div>
             <div id="plot">
                 <h2>분석 그래프</h2>
                 <div id="graph-container" class="centered">
