--- a/templates/result.html
+++ b/templates/result.html
@@ -12,6 +12,7 @@
         <div id="result" class="hidden">
             <h2>분석 결과</h2>
             <div id="error_code_descriptions"></div>
+            <div id="most_queried_ip"></div>
             <div id="plot">
                 <h2>분석 그래프</h2>
                 <div id="graph-container" class="centered">
