--- a/templates/result.html
+++ b/templates/result.html
@@ -13,6 +13,7 @@
             <h2>분석 결과</h2>
             <div id="error_code_descriptions"></div>
             <div id="most_queried_ip"></div>
+            <div id="ip_query_count"></div>
             <div id="plot">
                 <h2>분석 그래프</h2>
                 <div id="graph-container" class="centered">
