--- a/templates/result.html
+++ b/templates/result.html
@@ -13,7 +13,7 @@
             <h2>분석 결과</h2>
             <div id="error_code_descriptions"></div>
             <div id="most_queried_ip"></div>
-            <div id="ip_query_count"></div>
+            <div>가장 많이 조회된 IP는 [183.111.66.207] 입니다.</div>
             <div id="plot">
                 <h2>분석 그래프</h2>
                 <div id="graph-container" class="centered">
